# genemind

./: .gitignore  README.md  execution_example.ipynb  main.py  prompt_file  pyproject.toml  querries_script.py  tutorial.md
data/: attributes.csv  attributes.txt  gene_popularity_count.py  instructions.txt
src/: biomart_query.py  gene_lookup.py  print_gene.py  pydantic_classes.py  querries_script.py  tools.py
