[project]
name = "genemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biomart>=0.9.2",
    "biopython>=1.85",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "markdown>=3.8.2",
    "matplotlib>=3.10.5",
    "mcp>=1.13.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "reportlab>=4.4.3",
    "scipy>=1.16.1",
]
